--Beta 1.3--	23/09/2020
New Features:
* Added parallel loop for the steps

Changes:
* Inheritance cleanup

Fixes:
* Doesn't override new map until after looping in step

--Beta 1.2--	22/09/2020
New Features:
* chance to start alive added in
* tracks number of alive cells and can now return perc alive

--Beta 1.0.1--	21/09/2020
Changes:
- .net standard conversion of project to dll file

Fixes:
-Removed duplicate files

--Beta 1.0--	21/09/2020
New features:
-Coloured printing of changes over each step an option given
---green for alive
---red for dead
-Wrapping of edges is now optional
-Extinct method added in, unused

Fixes:
-Fix of change variable typo in declaration

Changes:
-step simulate method moved from game of life to cellautomata class

--Alpha 1.1--	21/09/2020
New features:
-previous state stored in cell for history tracking

Changes:
-step simulate method moved from game of life to cellautomata class