@@ -5,12 +5,16 @@ using System.Threading.Tasks;
 
 namespace GameOfLife
 {
-    public class gamelife : cellautomata
+    public class cave : cellautomata
     {
-        public gamelife(int w, int h, bool wrap, float cStartAlive) : base(w, h, wrap, cStartAlive)
+        public cave(int w, int h, bool wrap, float cStartAlive, int birthlim, int deathlim) : base(w, h, wrap, cStartAlive)
         {
-            //add things here
+            birthlimit = birthlim;
+            deathlimit = deathlim;
         }
+
+        int birthlimit;
+        int deathlimit;
 
         //overriding
         public override void stepSimulate()
@@ -31,20 +35,19 @@ namespace GameOfLife
                    int nalive = neighs[x, y];
                    if (grid[x][y].alive)
                    {
-                       if (nalive == 2 | nalive == 3)      //survives
-                           {
-                               //keep alive
-                               grid[x][y].update(true);
-                       }
-                       else                                //dies
-                           {
+                       if (nalive < deathlimit)            //dies
+                       {
                            aliveCount -= 1;
                            grid[x][y].update(false);
                        }
+                       else                                //survives
+                       {
+                           grid[x][y].update(true);
+                       }
                    }
                    else  //dead cell at the mo
-                       {
-                       if (nalive == 3)
+                   {
+                       if (nalive > birthlimit)
                        {
                            aliveCount += 1;
                            grid[x][y].update(true);
